--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -8,7 +8,7 @@
 }
 
 body {
-    // display: flex;
+    display: flex;
     justify-content: center;
     min-height: 100vh;
     padding: 46px 40px;
