--- a/src/sass/_abstracts.scss
+++ b/src/sass/_abstracts.scss
@@ -55,3 +55,11 @@
             @content;
         }
     }
+
+    // Image for high density screens 
+    // --- 
+    @mixin bg-img-high-density() {
+        @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+            @content;
+        }
+    }
